--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.0", features = ["full"] }
-teloxide = { version = "0.12", features = ["macros"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-log = "0.4"
-env_logger = "0.10"
-chrono = { version = "0.4", features = ["serde"] }
-uuid = { version = "1.0", features = ["v4"] }
-simple_logger = "4.0"
-anyhow = "1.0"
+tokio = { version = "1.47.1", features = ["full"] }
+teloxide = { version = "0.17.0", features = ["macros"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+log = "0.4.28"
+simple_logger = "5.0.0"
 rand = "0.10.0-rc.0"
+
+[dev-dependencies]
+tempfile = "3.23.0"
